--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "styled-components": "^5.2.1",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
